--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
 
         <div class="swiper-slide swiper-slide2">
-          <a href="#"><img src="img/_S2_6.jpg" alt=""></a>
+          <a href="#"><img src="img/S2_6.jpg" alt=""></a>
           <div class="s2_text">
             <p>호치카라맨투맨</p>
             <h5>￦29,8000</h5>
